--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "mohamed aissa brahimi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoosastic": "^4.5.0",
+    "mongoose": "^5.6.5"
   }
 }
