--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "demo to how use docker with js projects",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "babel-watch server.js",
+    "clean": "rm -rf dist/*",
+    "build": "npm run clean && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "start": "node dist/server.js"
   },
   "author": "mohamed aissa brahimi",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-watch": "^2.0.7",
     "express": "^4.17.1",
     "mongoosastic": "^4.5.0",
     "mongoose": "^5.6.5"
